# github-actions-practice

./: Dockerfile  pyproject.toml  ruff.toml
.github/actions/setup-python-env/: action.yml
.github/workflows/: ci.yml  pr-greet.yml  reusable-test.yml
src/: main.py  math_util.py
tests/: test_main.py  test_math.py
